--- a/src/Componets/Cta.css
+++ b/src/Componets/Cta.css
@@ -1,6 +1,9 @@
 .btns {
 
+
+
     display: flex;
+    top: 1rem;
     padding: 8px;
     gap: 30px;
     color: white;
@@ -11,6 +14,4 @@
 
     color: yellow;
     border-color: yellow;
-
-
 }
