--- a/src/Componets/Nav.css
+++ b/src/Componets/Nav.css
@@ -4,32 +4,35 @@ nav {
     position: fixed;
     padding: 0.6rem 2rem;
     border-radius: 24px;
-    border: solid var(--color-bg);
+    border: 2.8px solid var(--color-bg);
     z-index: 2;
     display: flex;
     gap: 2;
     margin-left: 600px;
-    background: none;
-    backdrop-filter: blur(15px);
+    background: transparent;
+    backdrop-filter: blur(3px);
     bottom: 3rem;
     cursor: pointer;
 }
 
 nav a {
-    background: transparent;
-    font-size: 1.4rem;
-    padding: 0.3rem 0.9rem;
+    background: none;
+    font-size: 1.3rem;
+    padding: 0.2rem 0.9rem;
     align-items: center;
 }
 
 nav a:hover{
-    background: yellow;
+    background: var(--color-bg);
     border-radius: 18px;
 }
 
 nav a.active {
-    background: yellow;
-    border-radius: 30px;
+    background: var(--color-bg);
+    border-radius: 18px;
 }
 
+.icon{
+    background: transparent;
+}
 
