--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
     margin: 0;
     box-sizing: border-box;
     outline: 0;
-    background: rgb(22, 9, 68);
+    background: #040714;
     color: white;
     padding: 0;
     text-decoration: none;
